@@ -131,6 +131,16 @@
 #log_type information
 
 # ======================================================================
+# Security
+# ======================================================================
+
+# If set, only clients that have a matching prefix on their clientid will be
+# allowed to connect to the broker. By default, all clients may connect.
+# For example, setting "secure-" here would mean a client "secure-client" could
+# connect but another with clientid "mqtt" couldn't.
+#clientid_prefixes
+
+# ======================================================================
 # Bridges
 # ======================================================================
 
@@ -172,7 +182,6 @@
 # ======================================================================
 
 #autosave_on_changes
-#clientid_prefixes
 #connection_messages
 #retained_persistence
 #trace_level
